Added couple references

--- a/race_ethnicity04/References.bib
+++ b/race_ethnicity04/References.bib
@@ -20794,19 +20794,17 @@ L'auto-correction dans le discours se fait typiquement en trois temps. Dans un p
 	file = {Heine et Kuteva - 2003 - On contact-induced grammaticalization.pdf:C\:\\Users\\josh8\\Zotero\\storage\\NPU49BUD\\Heine et Kuteva - 2003 - On contact-induced grammaticalization.pdf:application/pdf}
 }
 
-@article{mufwene_grammaticization_1998,
-	title = {Grammaticization is a part of the development of creoles},
-	volume = {13},
+@article{mufwene_grammaticization_2008,
+	title = {Grammaticization is part of the development of creoles},
+	volume = {16},
 	issn = {0920-9034, 1569-9870},
-	url = {http://www.jbe-platform.com/content/journals/10.1075/jpcl.13.1.22sal},
-	doi = {10.1075/jpcl.13.1.22sal},
 	language = {en},
 	number = {1},
 	urldate = {2020-01-10},
-	journal = {Journal of Pidgin and Creole Languages},
+	journal = {PAPIA-Revista Brasileira de Estudos do Contato Linguístico},
 	author = {Mufwene, Salikoko S.},
-	year = {1998},
-	pages = {213--213},
+	year = {2008},
+	pages = {5--31},
 	file = {Mufwene - 1998 - Salikoko S. Mufwene.pdf:C\:\\Users\\josh8\\Zotero\\storage\\SYVSHTY6\\Mufwene - 1998 - Salikoko S. Mufwene.pdf:application/pdf}
 }
 
@@ -20820,6 +20818,7 @@ L'auto-correction dans le discours se fait typiquement en trois temps. Dans un p
 	journal = {Journal of Pidgin and Creole Languages},
 	author = {Myers-Scotton, Carol},
 	year = {2001},
+	keywords = {Read},
 	pages = {217--273},
 	file = {Myers-Scotton - Implications of abstract grammatical structure Tw.pdf:C\:\\Users\\josh8\\Zotero\\storage\\N35WI2HE\\Myers-Scotton - Implications of abstract grammatical structure Tw.pdf:application/pdf}
 }
@@ -21025,6 +21024,7 @@ L'auto-correction dans le discours se fait typiquement en trois temps. Dans un p
 	editor = {Lefebvre, Claire and White, Lydia and Jourdan, Christine},
 	year = {2006},
 	doi = {10.1075/lald.42.03sie},
+	keywords = {Read},
 	pages = {277--294},
 	file = {Sanchez 2006.pdf:C\:\\Users\\josh8\\Zotero\\storage\\N2P4FQHH\\Sanchez 2006.pdf:application/pdf}
 }
@@ -21043,6 +21043,7 @@ L'auto-correction dans le discours se fait typiquement en trois temps. Dans un p
 	month = feb,
 	year = {2017},
 	doi = {10.1093/oxfordhb/9780199573776.013.18},
+	keywords = {Read},
 	pages = {1--67},
 	file = {Aboh et deGraff - 2017 - A Null Theory of Creole Formation Based on Univers.pdf:C\:\\Users\\josh8\\Zotero\\storage\\77QK8WA7\\Aboh et deGraff - 2017 - A Null Theory of Creole Formation Based on Univers.pdf:application/pdf}
 }
@@ -21766,4 +21767,136 @@ The publication of this material was accomplished between 1970 and 1978, again  
 	year = {2001},
 	pages = {57},
 	file = {tab02.pdf:C\:\\Users\\josh8\\Zotero\\storage\\NR8ZN9FC\\tab02.pdf:application/pdf}
+}
+
+@book{bucholtz_white_2010,
+	title = {White {Kids}: {Language}, {Race}, and {Styles} of {Youth} {Identity}},
+	isbn = {978-1-139-49509-7},
+	shorttitle = {White {Kids}},
+	abstract = {In White Kids, Mary Bucholtz investigates how white teenagers use language to display identities based on race and youth culture. Focusing on three youth styles - preppies, hip hop fans, and nerds - Bucholtz shows how white youth use a wealth of linguistic resources, from social labels to slang, from Valley Girl speech to African American English, to position themselves in the school's racialized social order. Drawing on ethnographic fieldwork in a multiracial urban California high school, the book also demonstrates how European American teenagers talk about race when discussing interracial friendship and difference, narrating racialized fear and conflict, and negotiating their own ethnoracial classification. The first book to use techniques of linguistic analysis to examine the construction of diverse white identities, it will be welcomed by researchers and students in linguistics, anthropology, ethnic studies and education.},
+	language = {en},
+	publisher = {Cambridge University Press},
+	author = {Bucholtz, Mary},
+	month = dec,
+	year = {2010},
+	note = {Google-Books-ID: mtqrQIzIM4wC},
+	keywords = {Language Arts \& Disciplines / Linguistics / General, Psychology / Social Psychology, Social Science / General, Language Arts \& Disciplines / Linguistics / Sociolinguistics, Education / General, Family \& Relationships / Life Stages / Adolescence, Social Science / Anthropology / Cultural \& Social, Social Science / Ethnic Studies / General},
+	file = {Bucholtz - White Kids.pdf:C\:\\Users\\josh8\\Zotero\\storage\\WX8A9BIF\\Bucholtz - White Kids.pdf:application/pdf}
+}
+
+@incollection{luscher_emplois_1996,
+	title = {Emplois et interprétations du {Passé} {Composé}},
+	volume = {18},
+	isbn = {978-2-600-05389-1},
+	language = {French},
+	booktitle = {Cahiers de {Linguistique} {Francaise}},
+	publisher = {Librairie Droz},
+	author = {Luscher, Jean-Marc and Sthioul, Bertrand},
+	year = {1996},
+	note = {Google-Books-ID: 7kUv\_ZInNiQC},
+	pages = {187--218}
+}
+
+@techreport{us_department_of_commerce_1970_1973,
+	title = {1970 {Census} of {Louisiana}},
+	language = {en},
+	author = {{U.S. Department of Commerce}},
+	month = jan,
+	year = {1973},
+	pages = {71},
+	file = {1970a_la-01.pdf:C\:\\Users\\josh8\\Zotero\\storage\\IGGW5ADB\\1970a_la-01.pdf:application/pdf;1970a_la-02.pdf:C\:\\Users\\josh8\\Zotero\\storage\\E6ELBYAI\\1970a_la-02.pdf:application/pdf;1970a_la-03.pdf:C\:\\Users\\josh8\\Zotero\\storage\\WGFADBXS\\1970a_la-01.pdf:application/pdf;1970a_la-04.pdf:C\:\\Users\\josh8\\Zotero\\storage\\P3KZQ47Y\\1970a_la-04.pdf:application/pdf;1970a_la-05.pdf:C\:\\Users\\josh8\\Zotero\\storage\\C4JT8BG8\\1970a_la-05.pdf:application/pdf;1970a_la-06.pdf:C\:\\Users\\josh8\\Zotero\\storage\\PVAP5HJ3\\1970a_la-06.pdf:application/pdf;1970a_la-07.pdf:C\:\\Users\\josh8\\Zotero\\storage\\Y273S2ST\\1970a_la-07.pdf:application/pdf;1970a_la-08.pdf:C\:\\Users\\josh8\\Zotero\\storage\\QMIICEHU\\1970a_la-08.pdf:application/pdf;1970a_la-09.pdf:C\:\\Users\\josh8\\Zotero\\storage\\B5W88UGT\\1970a_la-09.pdf:application/pdf;1970a_la-10.pdf:C\:\\Users\\josh8\\Zotero\\storage\\8ECXIMGH\\1970a_la-10.pdf:application/pdf;1970a_la-11.pdf:C\:\\Users\\josh8\\Zotero\\storage\\RHETWTRE\\1970a_la-11.pdf:application/pdf;1970a_la-12.pdf:C\:\\Users\\josh8\\Zotero\\storage\\7937SK3F\\1970a_la-12.pdf:application/pdf;1970a_la-13.pdf:C\:\\Users\\josh8\\Zotero\\storage\\MW5ZIXLR\\1970a_la-13.pdf:application/pdf}
+}
+
+@misc{mla_louisiana_nodate,
+	title = {Louisiana},
+	url = {https://apps.mla.org/cgi-shl/docstudio/docs.pl?map_data_results},
+	urldate = {2020-04-08},
+	journal = {MLA Language Map Data Center},
+	author = {{MLA}},
+	file = {Data Center Results - Compare:C\:\\Users\\josh8\\Zotero\\storage\\MRY94RWW\\docs.html:text/html}
+}
+
+@book{rosa_looking_2019,
+	title = {Looking {Like} a {Language}, {Sounding} {Like} a {Race}: {Raciolinguistic} {Ideologies} and the {Learning} of {Latinidad}},
+	isbn = {978-0-19-063472-8},
+	abstract = {Looking like a Language, Sounding like a Race examines the emergence of linguistic and ethnoracial categories in the context of Latinidad. The book draws from more than twenty-four months of ethnographic and sociolinguistic fieldwork in a Chicago public school, whose student body is more than 90\% Mexican and Puerto Rican, to analyze the racialization of language and its relationship to issues of power and national identity. It focuses specifically on youth socialization to U.S. Latinidad as a contemporary site of political anxiety, raciolinguistic transformation, and urban inequity.  Jonathan Rosa's account studies the fashioning of Latinidad in Chicago's highly segregated Near Northwest Side; he links public discourse concerning the rising prominence of U.S. Latinidad to the institutional management and experience of raciolinguistic identities there. Anxieties surrounding Latinx identities push administrators to transform "at risk" Mexican and Puerto Rican students into "young Latino professionals." This institutional effort, which requires students to learn to be and, importantly, sound like themselves in highly studied ways, reveals administrators' attempts to navigate a precarious urban terrain in a city grappling with some of the nation's highest youth homicide, dropout, and teen pregnancy rates. Rosa explores the ingenuity of his research participants' responses to these forms of marginalization through the contestation of political, ethnoracial, and linguistic borders.},
+	language = {en},
+	publisher = {Oxford University Press},
+	author = {Rosa, Jonathan},
+	month = jan,
+	year = {2019},
+	note = {Google-Books-ID: sQJ6DwAAQBAJ},
+	keywords = {Language Arts \& Disciplines / Linguistics / Sociolinguistics, Social Science / Anthropology / Cultural \& Social},
+	file = {Rosa ch. 4.pdf:C\:\\Users\\josh8\\Zotero\\storage\\NLGV3FHT\\Rosa ch. 4.pdf:application/pdf}
+}
+
+@article{king_dialect_2018,
+	title = {Dialect {Contact} and the {Acadian} {French} {Subjunctive}: {A} {Cross}-{Varietal} {Study}},
+	volume = {6},
+	issn = {2049-7547},
+	shorttitle = {Dialect {Contact} and the {Acadian} {French} {Subjunctive}},
+	url = {http://www.cambridge.org/core/journals/journal-of-linguistic-geography/article/dialect-contact-and-the-acadian-french-subjunctive-a-crossvarietal-study/4D3C82ADA4EC5737F2400A55266624A3},
+	doi = {10.1017/jlg.2018.2},
+	abstract = {This study investigates mood choice for five Acadian French communities in Atlantic Canada which have intertwined settlement histories but which differ in terms of type and degree of dialect contact. The two communities with least contact with supralocal French preserve the highly salient imperfect subjunctive, moribund or absent from most other present-day spoken French varieties. While four communities exhibit high selection rates for the present subjunctive, in line with variationist analyses of other French varieties, one community has surprisingly low rates of such usage, along with absence of the imperfect subjunctive. This dichotomy is explained by the local prestige of the smaller of two founder groups for the community, settlers from Haute-Bretagne, France, a dialect area for which the historical record reveals low levels of subjunctive forms. The results highlight the importance not only of demographic factors but also of local identity construction in the formation of new contact varieties.},
+	language = {en},
+	number = {1},
+	urldate = {2020-04-17},
+	journal = {Journal of Linguistic Geography},
+	author = {King, Ruth and LeBlanc, Carmen L. and Grimm, D. Rick},
+	month = apr,
+	year = {2018},
+	note = {Publisher: Cambridge University Press},
+	pages = {4--19},
+	file = {Full Text PDF:C\:\\Users\\josh8\\Zotero\\storage\\JV4UEVWQ\\King et al. - 2018 - Dialect Contact and the Acadian French Subjunctive.pdf:application/pdf}
+}
+
+@incollection{lanehart_swb_2015,
+	title = {{SWB} ({Speaking} {While} {Black}): {Linguistic} {Profiling} and {Discrimination} {Based} on {Speech} as a {Surrogate} for {Race} against {Speakers} of {African} {American} {Vernacular} {English}},
+	isbn = {978-0-19-979550-5},
+	abstract = {The goal of The Oxford Handbook of African American Language is to provide readers with a wide range of analyses of both traditional and contemporary work on language use in African American communities in a broad collective. The Handbook offers a survey of language and its uses in African American communities from a wide range of contexts organized into seven sections: Origins and Historical Perspectives; Lects and Variation; Structure and Description; Child Language Acquisition and Development; Education; Language in Society; and Language and Identity. It is a handbook of research on African American Language (AAL) and, as such, provides a variety of scholarly perspectives that may not align with each other -- as is indicative of most scholarly research. The chapters in this book "interact" with one another as contributors frequently refer the reader to further elaboration on and references to related issues and connect their own research to related topics in other chapters within their own sections and the handbook more generally to create dialogue about AAL, thus affirming the need for collaborative thinking about the issues in AAL research. Though the Handbook does not and cannot include every area of research, it is meant to provide suggestions for future work on lesser-studied areas (e.g., variation/heterogeneity in regional, social, and ethnic communities) by highlighting a need for collaborative perspectives and innovative thinking while reasserting the need for better research and communication in areas thought to be resolved.},
+	language = {en},
+	booktitle = {The {Oxford} {Handbook} of {African} {American} {Language}},
+	publisher = {Oxford University Press},
+	author = {Baugh, John},
+	editor = {Lanehart, Sonja},
+	month = may,
+	year = {2015},
+	note = {Google-Books-ID: lFfCBwAAQBAJ},
+	keywords = {Language Arts \& Disciplines / Linguistics / General, Language Arts \& Disciplines / Linguistics / Sociolinguistics, Read, Social Science / Ethnic Studies / African American Studies, Social Science / Anthropology / Cultural \& Social, History / Social History, Language Arts \& Disciplines / Communication Studies},
+	pages = {755--769},
+	file = {Baugh - 2015 - .pdf:C\:\\Users\\josh8\\Zotero\\storage\\ACURLJM8\\Baugh - 2015 - .pdf:application/pdf}
+}
+
+@article{crain_language_2006,
+	title = {Language {Acquisition} is {Language} {Change}},
+	volume = {35},
+	issn = {1573-6555},
+	url = {https://doi.org/10.1007/s10936-005-9002-7},
+	doi = {10.1007/s10936-005-9002-7},
+	abstract = {According to the theory of Universal Grammar, the primary linguistic data guides children through an innately specified space of hypotheses. On this view, similarities between child-English and adult-German are as unsurprising as similarities between cousins who have never met. By contrast, experience-based approaches to language acquisition contend that child language matches the input, with nonadult forms being simply less articulated versions of the forms produced by adults. This paper reports several studies that provide support for the theory of Universal grammar, and resist explanation on experience-based accounts. Two studies investigate English-speaking children’s productions, and a third examines the interpretation of sentences by Japanese speaking children. When considered against the input children are exposed to, the findings of these and other studies are consistent with the continuity hypothesis, which supposes that child language can differ from the language spoken by adults only in ways that adult languages can differ from each other.},
+	language = {en},
+	number = {1},
+	urldate = {2020-04-23},
+	journal = {Journal of Psycholinguistic Research},
+	author = {Crain, Stephen and Goro, Takuya and Thornton, Rosalind},
+	month = jan,
+	year = {2006},
+	pages = {31--49},
+	file = {Springer Full Text PDF:C\:\\Users\\josh8\\Zotero\\storage\\J48W8Q54\\Crain et al. - 2006 - Language Acquisition is Language Change.pdf:application/pdf}
+}
+
+@phdthesis{landry_creole_2016,
+	address = {Falmer, UK},
+	type = {{PhD}},
+	title = {A {Creole} melting pot: the politics of language, race, and ldentity in southwest {Louisiana}, 1918-45},
+	shorttitle = {A {Creole} melting pot},
+	url = {http://sro.sussex.ac.uk/id/eprint/86158/},
+	abstract = {Southwest Louisiana Creoles underwent great change between World Wars I and II as they confronted American culture, people, and norms. This work examines that cultural transformation, paying particular attention to the processes of cultural assimilation and resistance to the introduction and imposition of American social values and its southern racial corollary: Jim Crow. As this work makes clear, the transition to American identity transmuted the cultural foundations of French- and Creole-speaking Creole communities. World War I signalled early transformative changes and over the next three decades, the region saw the introduction of English language, new industries, an increasing number of Protestant denominations, and the forceful imposition of racialized identities and racial segregation. Assimilation and cultural resistance characterized the Creole response, but by 1945, southwest Louisiana more closely resembled much of the American South. Creole leaders in churches, schools, and the tourism industry offered divergent reactions; some elite Creoles began looking to Francophone Canada for whitened ethnic identity support while others turned toward the Catholic establishment in Baltimore, Maryland to bolster their faith. Creoles were not the only distinct community to undergo Americanization, but Louisiana Creoles were singular in their response. As this study makes clear – in ways no historian has previously documented – Louisiana Creoles bifurcated as a result of Americanization. This study also contributes to, and broadens, the literature on Acadian identity. Previously, scholars simply assumed that whitened Latins in Louisiana had always identified with Acadia and their black-racialized brethren with Haiti. This thesis, however, suggests that Cajun and Creole are not opposites. Rather, they derive from the same people and culture, and their perceived and articulated difference emerged in response to Americanization. Through a critical analysis of that bifurcation process, this thesis demonstrates how Acadianized identity and culture emerged in the first half of the 20th century.},
+	language = {English},
+	urldate = {2020-05-04},
+	school = {University of Sussex},
+	author = {Landry, Christophe},
+	month = apr,
+	year = {2016},
+	file = {Full Text PDF:C\:\\Users\\josh8\\Zotero\\storage\\2MB2ZPIF\\Landry - 2016 - A Creole melting pot the politics of language, ra.pdf:application/pdf;Snapshot:C\:\\Users\\josh8\\Zotero\\storage\\JG4XBK8S\\86158.html:text/html}
 }
